Limit available layer style blending modes to supported by ASL ones

ASL format supports less blending modes than Krita does, so we should
limit available ones in the GUI.

BUG:396873